[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retryflow"
version = "1.0.0"
description = "Smart retry engine with exponential backoff, jitter, per-attempt timeout, and async support"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "prabhay759" }]
keywords = ["retry", "backoff", "resilience", "async", "timeout", "decorator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/prabhay759/retryflow"
Repository = "https://github.com/prabhay759/retryflow"
Issues = "https://github.com/prabhay759/retryflow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["retryflow*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
